[gd_scene load_steps=3 format=3 uid="uid://di3o7xkphsebp"]

[ext_resource type="Script" path="res://scripts/gui.gd" id="1_yoyyu"]
[ext_resource type="Theme" uid="uid://cxq8wir4cfx51" path="res://assets/ui/Fonts/menu.tres" id="2_rcg35"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_yoyyu")

[node name="GameOver" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 304.0
offset_top = 141.0
offset_right = 848.0
offset_bottom = 449.0
theme = ExtResource("2_rcg35")
color = Color(0.360784, 0.368627, 0.266667, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameOver/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1

[node name="buttons" type="HBoxContainer" parent="GameOver/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
alignment = 1

[node name="restart" type="Button" parent="GameOver/VBoxContainer/buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "REINICIAR"

[node name="exit" type="Button" parent="GameOver/VBoxContainer/buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SALIR"

[node name="HBoxContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_right = -5.0
offset_bottom = 69.0
grow_horizontal = 2
theme = ExtResource("2_rcg35")

[node name="username" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="health" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="score" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GameOver/VBoxContainer/buttons/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/buttons/exit" to="." method="_on_exit_pressed"]
